# pirate-midi-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-please.yml  security-audit.yml
examples/: bootloader.rs  check.rs  go_to_bank.rs  restart.rs
resources/test/: check-example1.json
src/: lib.rs
src/messages/: bank.rs  check.rs  global.rs  mod.rs
src/models/: bank.rs  global.rs  mod.rs
